--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
             <version>3.3.1-1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <version>3.0.1.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
