--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,4 @@ spring:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
 mybatis:
-    mapper-locations: classpath:mapping/*.xml  #映射文件路径
+    mapper-locations: classpath:mapping/*.xml
