--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: 80
 
 spring:
     datasource:
@@ -11,5 +11,9 @@ spring:
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.jdbc.Driver
+    mvc:
+      favicon:
+        enabled: false
+
 mybatis:
     mapper-locations: classpath:mapping/*.xml
